<resources>
    <string name="app_name">STRONGR</string>
    <string name="button_signUp">Sign Up</string>
    <string name="hint_fullName">Full Name</string>
    <string name="hint_sex">Sex</string>
    <string name="hint_height">Height (cm)</string>
    <string name="hint_weight">Weight (kg)</string>
    <string name="hint_phoneNumber">Phone Number</string>
    <string name="hint_emailAddress">Email Address</string>
    <string name="hint_datePicker">Date of Birth</string>
    <string name="hint_password">Password</string>
    <string name="signUpMessage"><b>Sign Up for STRONGR</b></string>
    <string name="slogan">Create an account, create custom workouts, achieve your fitness goals, and more.</string>
    <string name="login">login</string>
    <string name="workout_name">Workout Name</string>
    <string name="create_workout">Create Workout</string>
    <string name="select_muscle_groups">Select Muscle Groups</string>
    <string name="createWorkout">Create</string>
    <string name="cancel">Cancel</string>
    <string name="logout">logout</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">settings</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addexercise_button">addExercise Button</string>
    <string name="editworkout_button">editWorkout Button</string>
    <string name="list_of_muscle_groups">List of Muscle Groups</string>
    <string name="muscle_groups">Muscle Groups</string>
    <string name="save">Save</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="full_name">Full Name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="workouts_per_week">Workouts per week</string>
    <string name="activity_level">Activity Level</string>
    <string name="email_address">Email Address</string>
    <string name="height_cm">Height (cm)</string>
    <string name="submit">Submit</string>
    <string name="my_workouts">My Workouts</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_weight">Log Weight</string>
    <string name="profile">Profile</string>
    <string name="workouts">Workouts</string>
    <string name="dashboard">Dashboard</string>

    <string-array name="activity_levels">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>
    </string-array>
</resources>