<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/workoutName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints="hint"
            android:hint="@string/workout_name"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.anurag.multiselectionspinner.MultiSpinner
            android:id="@+id/multiSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:hint="@string/muscle_groups"
            app:layout_constraintTop_toBottomOf="@id/workoutName"
            />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiSpinner">

            <Button
                android:id="@+id/save_changes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/baseline_done_24"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancel_changes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/outline_cancel_24"
                android:text="@string/cancel"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>