<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentDarker"
    tools:context=".activities.dashboard.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/baseline_fitness_center_24"
            android:text="  My Dashboard"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="384dp"
            android:layout_margin="8dp"
            app:alignmentMode="alignMargins"
            app:columnCount="2"
            app:columnOrderPreserved="true"
            app:rowCount="2">


            <androidx.cardview.widget.CardView
                android:id="@+id/myworkouts"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="28dp"
                app:cardBackgroundColor="@color/accentGrey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/workouts_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:srcCompat="@drawable/baseline_directions_run_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/my_workouts"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="28dp"
                app:cardBackgroundColor="@color/accentGrey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/workouts_image2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:srcCompat="@drawable/person" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="Profile"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="28dp"
                app:cardBackgroundColor="@color/accentGrey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/workouts_image3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:srcCompat="@drawable/baseline_monitor_weight_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/log_weight"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sign_out"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="28dp"
                app:cardBackgroundColor="@color/accentGrey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/workouts_image4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:srcCompat="@drawable/baseline_logout_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/sign_out"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:alignmentMode="alignMargins"
            app:columnCount="1"
            app:columnOrderPreserved="true"
            app:rowCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="28dp"
                app:cardBackgroundColor="@color/accentGrey"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">





            </androidx.cardview.widget.CardView>
        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>